--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "fs-extra": "^7.0.0",
     "glob": "^7.1.2",
     "injection-js": "^2.2.1",
-    "less": "^3.0.0",
+    "less": "^3.8.0",
+    "less-plugin-npm-import": "^2.1.0",
     "node-sass": "^4.5.3",
     "node-sass-tilde-importer": "^1.0.0",
     "postcss": "^7.0.0",
