--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,6 +8,9 @@ environment:
 matrix:
   fast_finish: true
 
+skip_tags: true
+skip_branch_with_pr: true
+
 install:
   - ps: Install-Product node $env:nodejs_version
   - node --version
