build: update to typescript 2.9 (#1031)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "target": "es2015",
     "moduleResolution": "node",
     "experimentalDecorators": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "pretty": true,
     "noEmitOnError": true,
     "noImplicitAny": false,
     "sourceMap": true,
