--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   ],
   "author": "David Herges <david@spektrakel.de>",
   "license": "MIT",
-  "repository": "https://github.com/dherges/ng-packagr.git",
-  "homepage": "https://github.com/dherges/ng-packagr",
+  "repository": "https://github.com/ng-packagr/ng-packagr.git",
+  "homepage": "https://github.com/ng-packagr/ng-packagr",
   "bugs": {
-    "url": "https://github.com/dherges/ng-packagr/issues"
+    "url": "https://github.com/ng-packagr/ng-packagr/issues"
   },
   "bin": {
     "ng-packagr": "./cli/main.js"
