--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 defaults: &defaults
   docker:
-    - image: angular/ngcontainer:latest
+    - image: angular/ngcontainer:0.3.3
   working_directory: ~/repo
 
 jobs:
