feat: add support for `resolveJsonModule`
Since version 7, Angular Compiler supports Json files and thus so should we.

Couple of things to note: At the moment tsickle doesn't support this, thus for this feature to work you need to disable `annotateForClosureCompiler`.

You'll also need to enable the following option in the `compilerOptions`
```
    "resolveJsonModule": true,
    "esModuleInterop": true,
    "allowSyntheticDefaultImports": true,
```

Closes #1050 and Closes https://github.com/angular/angular-cli/issues/11931

--- a/integration/samples/api/tsconfig.ngc.json
+++ b/integration/samples/api/tsconfig.ngc.json
@@ -1,6 +1,6 @@
 {
   "angularCompilerOptions": {
-    "annotateForClosureCompiler": true,
+    "annotateForClosureCompiler": false,
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
     "fullTemplateTypeCheck": true,
@@ -14,6 +14,9 @@
     "module": "es2015",
     "moduleResolution": "node",
     "outDir": "",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "declaration": true,
     "inlineSourceMap": true,
     "inlineSources": true,
