--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "rimraf": "^2.6.1",
     "rollup": "^0.66.0",
     "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rxjs": "^6.0.0",
