--- a/package.json
+++ b/package.json
@@ -134,8 +134,6 @@
     "integration:watch:specs": "cross-env TS_NODE_PROJECT=integration/tsconfig.specs.json mocha --timeout 25000 --require ts-node/register \"integration/watch/*.spec.ts\"",
     "test:specs": "cross-env TS_NODE_PROJECT=src/tsconfig.specs.json mocha --require ts-node/register \"src/**/*.spec.ts\"",
     "test": "yarn build && yarn test:specs && yarn integration:samples && yarn integration:specs && yarn integration:watch:specs && yarn integration:consumers",
-    "commitmsg": "commitlint -e",
-    "precommit": "pretty-quick --staged",
     "gh-pages": "gh-pages -d docs/ghpages",
     "postinstall": "opencollective postinstall"
   },
@@ -143,5 +141,11 @@
     "type": "opencollective",
     "url": "https://opencollective.com/ng-packagr",
     "logo": "https://opencollective.com/opencollective/logo.txt"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -e",
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
