ci: deploy job should be run on git tags

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,7 +89,7 @@ workflows:
             - install
       - deploy:
           requires:
-            - build_&_test
+            - build_and_test
           filters:
             branches:
               ignore: /.*/
