--- a/package.json
+++ b/package.json
@@ -57,23 +57,21 @@
     "update-notifier": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/compiler": "^6.0.0 || ^7.0.0-beta.0",
-    "@angular/compiler-cli": "^6.0.0 || ^7.0.0-beta.0",
+    "@angular/compiler": "^6.0.0 || ^7.2.0-beta.0",
+    "@angular/compiler-cli": "^6.0.0 || ^7.2.0-beta.0",
     "tsickle": ">=0.27.3",
     "tslib": "^1.9.0",
     "typescript": ">= 2.7 <3.3"
   },
   "devDependencies": {
-    "@angular-devkit/core": "^7.0.0",
-    "@angular/cdk": "~7.0.0",
-    "@angular/common": "~7.0.0",
-    "@angular/compiler": "~7.0.0",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/core": "~7.0.0",
-    "@angular/http": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
-    "@angular/platform-browser": "~7.0.0",
-    "@angular/router": "~7.0.0",
+    "@angular/cdk": "~7.2.0-rc.0",
+    "@angular/common": "~7.2.0-rc.0",
+    "@angular/compiler": "~7.2.0-rc.0",
+    "@angular/compiler-cli": "~7.2.0-rc.0",
+    "@angular/core": "~7.2.0-rc.0",
+    "@angular/http": "~7.2.0-rc.0",
+    "@angular/platform-browser": "~7.2.0-rc.0",
+    "@angular/router": "~7.2.0-rc.0",
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-angular": "^7.0.0",
     "@types/acorn": "^4.0.3",
@@ -113,7 +111,7 @@
     "ts-node": "^7.0.0",
     "tsickle": "^0.33.0",
     "tslib": "^1.9.0",
-    "typescript": "~3.1.3",
+    "typescript": "~3.2.2",
     "zone.js": "^0.8.26"
   },
   "private": true,
