fix @angular peer dependencies

--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "update-notifier": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/compiler": "^6.0.0 || ^7.2.0-beta.0",
-    "@angular/compiler-cli": "^6.0.0 || ^7.2.0-beta.0",
+    "@angular/compiler": "^6.0.0 || ^7.0.0 || ^7.2.0-beta.0",
+    "@angular/compiler-cli": "^6.0.0 || ^7.0.0 || ^7.2.0-beta.0",
     "tsickle": ">=0.27.3",
     "tslib": "^1.9.0",
     "typescript": ">= 2.7 <3.3"
