test: add test for deep import

--- a/integration/samples/secondary/feature-c/package.json
+++ b/integration/samples/secondary/feature-c/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/dherges/ng-packagr.git",
   "ngPackage": {
     "lib": {
-      "entryFile": "feature-c.ts"
+      "entryFile": "index.ts"
     }
   }
 }
