--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rxjs": "^6.0.0",
     "stylus": "^0.54.5",
-    "uglify-js": "^3.0.7",
+    "terser": "^3.16.1",
     "update-notifier": "^2.3.0"
   },
   "peerDependencies": {
