feat: add node-sass support with sass as default

--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "injection-js": "^2.2.1",
     "less": "^3.8.0",
     "less-plugin-npm-import": "^2.1.0",
-    "node-sass": "^4.9.3",
     "node-sass-tilde-importer": "^1.0.0",
     "opencollective-postinstall": "^2.0.1",
     "postcss": "^7.0.0",
@@ -52,6 +51,7 @@
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rxjs": "^6.0.0",
+    "sass": "^1.17.3",
     "stylus": "^0.54.5",
     "terser": "^3.16.1",
     "update-notifier": "^2.3.0"
@@ -82,7 +82,6 @@
     "@types/jasmine": "^3.0.0",
     "@types/mocha": "^5.0.0",
     "@types/node": "^11.0.0",
-    "@types/node-sass": "^4.0.0",
     "@types/react": "^16.0.19",
     "@types/react-dom": "^16.0.2",
     "@types/read-pkg-up": "^3.0.1",
