test: update scss integration tests to work without node-sass

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@angular/compiler-cli": "~7.2.0-rc.0",
     "@angular/core": "~7.2.0-rc.0",
     "@angular/http": "~7.2.0-rc.0",
+    "@angular/material": "^7.3.5",
     "@angular/platform-browser": "~7.2.0-rc.0",
     "@angular/router": "~7.2.0-rc.0",
     "@commitlint/cli": "^7.0.0",
