--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 defaults: &defaults
   docker:
-    - image: angular/ngcontainer:0.3.3
+    - image: circleci/node:10.12-browsers
   working_directory: ~/repo
 
 attach_options: &attach_options
