--- a/integration/consumers/ng-cli/tsconfig.json
+++ b/integration/consumers/ng-cli/tsconfig.json
@@ -3,12 +3,13 @@
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
     "baseUrl": "src",
+    "skipLibCheck": true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2016", "dom"]
+    "lib": ["es2018", "dom"]
   }
 }
