--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "update-notifier": "^3.0.0"
   },
   "peerDependencies": {
-    "@angular/compiler": "^6.0.0 || ^7.0.0 || ^8.0.0-beta.0",
-    "@angular/compiler-cli": "^6.0.0 || ^7.0.0 || ^8.0.0-beta.0",
+    "@angular/compiler": "^6.0.0 || ^7.0.0 || ^8.0.0-beta.0 || ^8.1.0-beta.0",
+    "@angular/compiler-cli": "^6.0.0 || ^7.0.0 || ^8.0.0-beta.0 || ^8.1.0-beta.0",
     "tslib": "^1.9.0",
     "typescript": ">=2.7 < 3.5"
   },
