--- a/integration/consumers/ng-cli/package.json
+++ b/integration/consumers/ng-cli/package.json
@@ -27,7 +27,7 @@
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0-rc.4",
+    "@angular-devkit/build-angular": "~0.801.0",
     "@angular/cli": "~8.0.0-rc.4",
     "@angular/compiler-cli": "~8.0.0-rc.5",
     "@types/jasmine": "~3.3.0",
