--- a/integration/consumers/ng-cli/package.json
+++ b/integration/consumers/ng-cli/package.json
@@ -16,20 +16,20 @@
   "private": true,
   "dependencies": {
     "@angular/cdk": "~8.0.0",
-    "@angular/common": "~8.0.0-rc.5",
-    "@angular/compiler": "~8.0.0-rc.5",
-    "@angular/core": "~8.0.0-rc.5",
-    "@angular/forms": "~8.0.0-rc.5",
-    "@angular/platform-browser": "~8.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "~8.0.0-rc.5",
-    "@angular/router": "~8.0.0-rc.5",
+    "@angular/common": "~8.1.0",
+    "@angular/compiler": "~8.1.0",
+    "@angular/core": "~8.1.0",
+    "@angular/forms": "~8.1.0",
+    "@angular/platform-browser": "~8.1.0",
+    "@angular/platform-browser-dynamic": "~8.1.0",
+    "@angular/router": "~8.1.0",
     "rxjs": "~6.5.2",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.0",
-    "@angular/cli": "~8.0.0-rc.4",
-    "@angular/compiler-cli": "~8.0.0-rc.5",
+    "@angular/cli": "~8.1.0",
+    "@angular/compiler-cli": "~8.1.0",
     "@types/jasmine": "~3.3.0",
     "@types/node": "~12.0.0",
     "codelyzer": "~5.1.0",
