--- a/package.json
+++ b/package.json
@@ -63,13 +63,13 @@
   },
   "devDependencies": {
     "@angular/cdk": "~8.0.0-rc.0",
-    "@angular/common": "~8.0.0-rc.0",
-    "@angular/compiler": "~8.0.0-rc.0",
-    "@angular/compiler-cli": "~8.0.0-rc.0",
-    "@angular/core": "~8.0.0-rc.0",
+    "@angular/common": "~8.1.0",
+    "@angular/compiler": "~8.1.0",
+    "@angular/compiler-cli": "~8.1.0",
+    "@angular/core": "~8.1.0",
     "@angular/material": "^8.0.0",
-    "@angular/platform-browser": "~8.0.0-rc.0",
-    "@angular/router": "~8.0.0-rc.0",
+    "@angular/platform-browser": "~8.1.0",
+    "@angular/router": "~8.1.0",
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-angular": "^8.0.0",
     "@types/acorn": "^4.0.3",
