build: update @angular/cdk to version ~8.1.0

--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "typescript": ">=2.7 < 3.5"
   },
   "devDependencies": {
-    "@angular/cdk": "~8.0.0-rc.0",
+    "@angular/cdk": "~8.1.0",
     "@angular/common": "~8.1.0",
     "@angular/compiler": "~8.1.0",
     "@angular/compiler-cli": "~8.1.0",
