--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "rxjs": "^6.0.0",
     "sass": "^1.17.3",
     "stylus": "^0.54.5",
-    "terser": "^4.0.0",
+    "terser": "^4.1.2",
     "update-notifier": "^3.0.0"
   },
   "peerDependencies": {
@@ -62,14 +62,14 @@
     "typescript": ">=2.7 <3.6"
   },
   "devDependencies": {
-    "@angular/cdk": "~8.1.0",
-    "@angular/common": "~8.1.0",
-    "@angular/compiler": "~8.1.0",
-    "@angular/compiler-cli": "~8.1.0",
-    "@angular/core": "~8.1.0",
+    "@angular/cdk": "^8.0.0",
+    "@angular/common": "~8.2.0-next.2",
+    "@angular/compiler": "~8.2.0-next.2",
+    "@angular/compiler-cli": "~8.2.0-next.2",
+    "@angular/core": "~8.2.0-next.2",
     "@angular/material": "^8.0.0",
-    "@angular/platform-browser": "~8.1.0",
-    "@angular/router": "~8.1.0",
+    "@angular/platform-browser": "~8.2.0-next.2",
+    "@angular/router": "~8.2.0-next.2",
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-angular": "^8.0.0",
     "@types/acorn": "^4.0.3",
