refactor: update repo url

--- a/integration/samples/keep-output-path/package.json
+++ b/integration/samples/keep-output-path/package.json
@@ -3,5 +3,5 @@
   "description": "A sample library with deleteDestPath setting set to false",
   "version": "1.0.0-pre.0",
   "private": true,
-  "repository": "https://github.com/dherges/ng-packagr.git"
+  "repository": "https://github.com/ng-packagr/ng-packagr.git"
 }
