--- a/integration/samples/scss-paths/sub-module/package.json
+++ b/integration/samples/scss-paths/sub-module/package.json
@@ -4,7 +4,7 @@
   "description": "A sub module library",
   "version": "1.0.0-pre.0",
   "private": true,
-  "repository": "https://github.com/dherges/ng-packagr.git",
+  "repository": "https://github.com/ng-packagr/ng-packagr.git",
   "peerDependencies": {
     "@angular/core": "^4.1.2",
     "@angular/common": "^4.1.2"
