--- a/integration/samples/secondary/shared/package.json
+++ b/integration/samples/secondary/shared/package.json
@@ -2,7 +2,7 @@
   "$schema": "../../../../src/package.schema.json",
   "description": "A secondary entry point with shared feature",
   "private": true,
-  "repository": "https://github.com/dherges/ng-packagr.git",
+  "repository": "https://github.com/ng-packagr/ng-packagr.git",
   "ngPackage": {
     "lib": {
       "entryFile": "shared.ts"
