--- a/integration/samples/typings/package.json
+++ b/integration/samples/typings/package.json
@@ -3,7 +3,7 @@
   "description": "A sample library with custom type definitions",
   "version": "1.0.0-pre.0",
   "private": true,
-  "repository": "https://github.com/dherges/ng-packagr.git",
+  "repository": "https://github.com/ng-packagr/ng-packagr.git",
   "bundledDependencies": ["chalk"],
   "peerDependencies": {
     "validate-commit-msg": "2.12.2"
