--- a/integration/samples/apf/secondary/package.json
+++ b/integration/samples/apf/secondary/package.json
@@ -2,7 +2,7 @@
   "$schema": "../../../../src/package.schema.json",
   "description": "A secondary entry point for apf",
   "private": true,
-  "repository": "https://github.com/dherges/ng-packagr.git",
+  "repository": "https://github.com/ng-packagr/ng-packagr.git",
   "ngPackage": {
     "lib": {
       "entryFile": "public_api.ts"
