--- a/integration/samples/api/secondary/package.json
+++ b/integration/samples/api/secondary/package.json
@@ -3,7 +3,7 @@
   "$schema": "../../../../src/package.schema.json",
   "description": "A secondary entry point for api testing",
   "private": true,
-  "repository": "https://github.com/dherges/ng-packagr.git",
+  "repository": "https://github.com/ng-packagr/ng-packagr.git",
   "ngPackage": {
     "lib": {
       "entryFile": "public_api.ts"
