--- a/integration/samples/core/package.json
+++ b/integration/samples/core/package.json
@@ -3,7 +3,7 @@
   "description": "A sample library with folder layout from Angular core packages",
   "version": "1.0.0-pre.0",
   "private": true,
-  "repository": "https://github.com/dherges/ng-packagr.git",
+  "repository": "https://github.com/ng-packagr/ng-packagr.git",
   "sideEffects": true,
   "peerDependencies": {
     "@angular/common": "^4.1.3",
