--- a/integration/samples/custom/package.json
+++ b/integration/samples/custom/package.json
@@ -3,7 +3,7 @@
   "description": "A sample library with custom folder layout and non-scoped package name",
   "version": "1.0.0-pre.0",
   "private": true,
-  "repository": "https://github.com/dherges/ng-packagr.git",
+  "repository": "https://github.com/ng-packagr/ng-packagr.git",
   "peerDependencies": {
     "@angular/core": "^4.1.3",
     "@angular/common": "^4.1.3"
