--- a/integration/samples/externals/package.json
+++ b/integration/samples/externals/package.json
@@ -3,7 +3,7 @@
   "description": "A sample library with multiple import syntax for rxjs",
   "version": "1.0.0-pre.0",
   "private": true,
-  "repository": "https://github.com/dherges/ng-packagr.git",
+  "repository": "https://github.com/ng-packagr/ng-packagr.git",
   "peerDependencies": {
     "rxjs": "^5.4.2",
     "@angular/core": "^4.1.2",
