--- a/integration/samples/secondary/feature-a/package.json
+++ b/integration/samples/secondary/feature-a/package.json
@@ -2,7 +2,7 @@
   "$schema": "../../../../src/package.schema.json",
   "description": "A secondary entry point (feature b) that depends on @sample/secondary/shared",
   "private": true,
-  "repository": "https://github.com/dherges/ng-packagr.git",
+  "repository": "https://github.com/ng-packagr/ng-packagr.git",
   "ngPackage": {
     "lib": {
       "entryFile": "feature-a.ts"
