--- a/integration/samples/secondary/feature-b/package.json
+++ b/integration/samples/secondary/feature-b/package.json
@@ -3,7 +3,7 @@
   "description":
     "A secondary entry point (feature b) that depends on @sample/secondary/feature-a and transitively on @sample/secondary/shared",
   "private": true,
-  "repository": "https://github.com/dherges/ng-packagr.git",
+  "repository": "https://github.com/ng-packagr/ng-packagr.git",
   "ngPackage": {
     "lib": {
       "entryFile": "feature-b.ts"
