--- a/integration/samples/secondary/feature-c/package.json
+++ b/integration/samples/secondary/feature-c/package.json
@@ -3,7 +3,7 @@
   "description":
     "A secondary entry point (feature c) that depends on @sample/secondary/feature-a, @sample/secondary/feature-b and transitively on @sample/secondary/shared",
   "private": true,
-  "repository": "https://github.com/dherges/ng-packagr.git",
+  "repository": "https://github.com/ng-packagr/ng-packagr.git",
   "ngPackage": {
     "lib": {
       "entryFile": "index.ts"
