--- a/integration/watch/intra-dependent/package.json
+++ b/integration/watch/intra-dependent/package.json
@@ -4,7 +4,7 @@
   "description": "A sample library testing Angular Package Format",
   "version": "1.0.0-pre.0",
   "private": true,
-  "repository": "https://github.com/dherges/ng-packagr.git",
+  "repository": "https://github.com/ng-packagr/ng-packagr.git",
   "main": "dist/bundles/intra-dependent.umd.js",
   "peerDependencies": {
     "@angular/core": "^4.1.2",
