feat: disable Ivy in default tsconfig

--- a/src/lib/ts/conf/tsconfig.ngc.json
+++ b/src/lib/ts/conf/tsconfig.ngc.json
@@ -1,5 +1,6 @@
 {
   "angularCompilerOptions": {
+    "enableIvy": false,
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
     "fullTemplateTypeCheck": true,
