--- a/integration/samples/api/tsconfig.ngc.json
+++ b/integration/samples/api/tsconfig.ngc.json
@@ -1,5 +1,6 @@
 {
   "angularCompilerOptions": {
+    "enableIvy": false,
     "annotateForClosureCompiler": false,
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
