fix: add downlevelConstructorParameters transformer
With this change tsickle is no longer needed to be enabled by default. Previously it was needed to TDZ that was caused by forwardRef.

Closes: #1400

--- a/integration/samples/api/tsconfig.ngc.json
+++ b/integration/samples/api/tsconfig.ngc.json
@@ -22,7 +22,7 @@
     "inlineSourceMap": true,
     "inlineSources": true,
     "skipLibCheck": true,
-    "emitDecoratorMetadata": true,
+    "emitDecoratorMetadata": false,
     "experimentalDecorators": true,
     "importHelpers": true,
     "lib": ["dom", "es2015"]
