--- a/src/lib/ts/conf/tsconfig.ngc.json
+++ b/src/lib/ts/conf/tsconfig.ngc.json
@@ -19,7 +19,7 @@
     "inlineSourceMap": true,
     "inlineSources": true,
     "skipLibCheck": true,
-    "emitDecoratorMetadata": true,
+    "emitDecoratorMetadata": false,
     "experimentalDecorators": true,
     "importHelpers": true,
     "lib": ["dom", "es2018"]
