--- a/package.json
+++ b/package.json
@@ -56,10 +56,10 @@
     "update-notifier": "^3.0.0"
   },
   "peerDependencies": {
-    "@angular/compiler": "^6.0.0 || ^7.0.0 || ^8.0.0-beta.0 || ^8.1.0-beta.0 || ^8.2.0-beta.0 || ^8.3.0-beta.0 || ^8.4.0-beta.0 || >=9.0.0-beta < 9",
-    "@angular/compiler-cli": "^6.0.0 || ^7.0.0 || ^8.0.0-beta.0 || ^8.1.0-beta.0 || ^8.2.0-beta.0 || ^8.3.0-beta.0 || ^8.4.0-beta.0 || >=9.0.0-beta < 9",
+    "@angular/compiler": "^9.0.0-beta",
+    "@angular/compiler-cli": "^9.0.0-beta",
     "tslib": "^1.9.0",
-    "typescript": ">=2.7 <3.6"
+    "typescript": ">=3.4 < 3.6"
   },
   "devDependencies": {
     "@angular/cdk": "^8.0.0",
