--- a/package.json
+++ b/package.json
@@ -63,13 +63,13 @@
   },
   "devDependencies": {
     "@angular/cdk": "^8.0.0",
-    "@angular/common": "~8.2.0-rc.0",
-    "@angular/compiler": "~8.2.0-rc.0",
-    "@angular/compiler-cli": "~8.2.0-rc.0",
-    "@angular/core": "~8.2.0-rc.0",
+    "@angular/common": "~9.0.0-next.11",
+    "@angular/compiler": "~9.0.0-next.11",
+    "@angular/compiler-cli": "~9.0.0-next.11",
+    "@angular/core": "~9.0.0-next.11",
     "@angular/material": "^8.0.0",
-    "@angular/platform-browser": "~8.2.0-rc.0",
-    "@angular/router": "~8.2.0-rc.0",
+    "@angular/platform-browser": "~9.0.0-next.11",
+    "@angular/router": "~9.0.0-next.11",
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-angular": "^8.0.0",
     "@types/acorn": "^4.0.3",
@@ -107,7 +107,7 @@
     "ts-node": "^8.0.0",
     "tsickle": "^0.37.0",
     "tslib": "^1.9.0",
-    "typescript": "~3.5.0",
+    "typescript": "~3.6.4",
     "zone.js": "^0.10.0"
   },
   "private": true,
