fix: remove redundant section in package.json

--- a/integration/samples/apf/package.json
+++ b/integration/samples/apf/package.json
@@ -17,5 +17,8 @@
     "lib": {
       "entryFile": "public_api.ts"
     }
+  },
+  "devDependencies": {
+    "@angular/compiler-cli": "^4.1.2"
   }
 }
