ci: optimize persist_to_workspace in build_and_test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
       #     destination: dist
       - persist_to_workspace:
           root: ~/repo
-          paths: .
+          paths: dist
 
   deploy:
     <<: *defaults
