--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "postbuild": "node ./scripts/postbuild.js",
     "schema": "json2ts --input src/ng-package.schema.json --output src/ng-package.schema.ts",
     "prerelease": "yarn build",
-    "release": "standard-version --message 'release: cut v%s' --no-verify",
+    "release": "standard-version --releaseCommitMessageFormat 'release: cut v%s' --no-verify",
     "postrelease": "node ./scripts/prepublish.js",
     "publish:ci": "yarn prerelease && yarn postrelease",
     "integration:samples": "integration/samples.sh",
