--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@angular/compiler": "^9.0.0-beta",
     "@angular/compiler-cli": "^9.0.0-beta",
     "tslib": "^1.9.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.6.4 || ^3.7.4"
   },
   "devDependencies": {
     "@angular/cdk": "^8.0.0",
