--- a/package.json
+++ b/package.json
@@ -62,13 +62,13 @@
   },
   "devDependencies": {
     "@angular/cdk": "^8.0.0",
-    "@angular/common": "~9.0.0-next.11",
-    "@angular/compiler": "~9.0.0-next.11",
-    "@angular/compiler-cli": "~9.0.0-next.11",
-    "@angular/core": "~9.0.0-next.11",
+    "@angular/common": "~9.0.0-rc.13",
+    "@angular/compiler": "~9.0.0-rc.13",
+    "@angular/compiler-cli": "~9.0.0-rc.13",
+    "@angular/core": "~9.0.0-rc.13",
     "@angular/material": "^8.0.0",
-    "@angular/platform-browser": "~9.0.0-next.11",
-    "@angular/router": "~9.0.0-next.11",
+    "@angular/platform-browser": "~9.0.0-rc.13",
+    "@angular/router": "~9.0.0-rc.13",
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-angular": "^8.0.0",
     "@types/acorn": "^4.0.3",
@@ -106,7 +106,7 @@
     "ts-node": "^8.0.0",
     "tsickle": "^0.38.0",
     "tslib": "^1.9.0",
-    "typescript": "~3.6.4",
+    "typescript": "~3.7.4",
     "zone.js": "^0.10.0"
   },
   "private": true,
