build: update rollup plugins

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "main": "./public_api.js",
   "typings": "./public_api.d.ts",
   "dependencies": {
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-json": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^7.1.0",
     "ajv": "^6.10.2",
     "autoprefixer": "^9.6.5",
     "browserslist": "^4.7.0",
@@ -44,10 +47,7 @@
     "read-pkg-up": "^5.0.0",
     "rimraf": "^3.0.0",
     "rollup": "1.31.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-sourcemaps": "^0.5.0",
     "rxjs": "^6.5.0",
     "sass": "^1.23.0",
     "stylus": "^0.54.7",
