--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
     "update-notifier": "^4.0.0"
   },
   "peerDependencies": {
-    "@angular/compiler": "^9.0.0-beta",
-    "@angular/compiler-cli": "^9.0.0-beta",
+    "@angular/compiler": "^9.0.0",
+    "@angular/compiler-cli": "^9.0.0",
     "tslib": "^1.9.0",
-    "typescript": "^3.6.4 || ^3.7.4"
+    "typescript": "~3.6.4 || ~3.7.4"
   },
   "devDependencies": {
     "@angular/cdk": "^8.0.0",
