--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@angular/compiler": "^9.0.0",
     "@angular/compiler-cli": "^9.0.0",
     "tslib": "^1.9.0",
-    "typescript": "~3.6.4 || ~3.7.4"
+    "typescript": ">=3.6 < 3.9"
   },
   "devDependencies": {
     "@angular/cdk": "^8.0.0",
