--- a/package.json
+++ b/package.json
@@ -61,14 +61,14 @@
     "typescript": ">=3.6 < 3.9"
   },
   "devDependencies": {
-    "@angular/cdk": "^8.0.0",
-    "@angular/common": "~9.0.0-rc.13",
-    "@angular/compiler": "~9.0.0-rc.13",
-    "@angular/compiler-cli": "~9.0.0-rc.13",
-    "@angular/core": "~9.0.0-rc.13",
-    "@angular/material": "^8.0.0",
-    "@angular/platform-browser": "~9.0.0-rc.13",
-    "@angular/router": "~9.0.0-rc.13",
+    "@angular/cdk": "^9.0.0",
+    "@angular/common": "~9.1.0-next.4",
+    "@angular/compiler": "~9.1.0-next.4",
+    "@angular/compiler-cli": "~9.1.0-next.4",
+    "@angular/core": "~9.1.0-next.4",
+    "@angular/material": "^9.0.0",
+    "@angular/platform-browser": "~9.1.0-next.4",
+    "@angular/router": "~9.1.0-next.4",
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-angular": "^8.0.0",
     "@types/acorn": "^4.0.3",
@@ -105,8 +105,8 @@
     "standard-version": "^7.0.0",
     "ts-node": "^8.0.0",
     "tsickle": "^0.38.0",
-    "tslib": "^1.9.0",
-    "typescript": "~3.7.4",
+    "tslib": "^1.10.0",
+    "typescript": "~3.8.3",
     "zone.js": "^0.10.0"
   },
   "private": true,
