--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - '10.9'
+  - '10.16'
   - '12.1'
 script: 'yarn test'
 cache:
@@ -18,7 +18,7 @@ notifications:
     urls:
       - 'https://www.travisbuddy.com/'
     on_success: never
-    on_failure: always
+    on_failure: never
     on_start: never
     on_cancel: never
     on_error: never
