--- a/integration/consumers/ng-cli/package.json
+++ b/integration/consumers/ng-cli/package.json
@@ -15,24 +15,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "~8.2.0",
-    "@angular/common": "~8.2.0",
-    "@angular/compiler": "~8.2.0",
-    "@angular/core": "~8.2.0",
-    "@angular/forms": "~8.2.0",
-    "@angular/platform-browser": "~8.2.0",
-    "@angular/platform-browser-dynamic": "~8.2.0",
-    "@angular/router": "~8.2.0",
-    "rxjs": "~6.5.2",
-    "zone.js": "^0.10.0"
+    "@angular/cdk": "~9.1.2",
+    "@angular/common": "~9.0.6",
+    "@angular/compiler": "~9.0.6",
+    "@angular/core": "~9.0.6",
+    "@angular/forms": "~9.0.6",
+    "@angular/platform-browser": "~9.0.6",
+    "@angular/platform-browser-dynamic": "~9.0.6",
+    "@angular/router": "~9.0.6",
+    "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.7",
-    "@angular/cli": "~8.3.7",
-    "@angular/compiler-cli": "~8.2.0",
+    "@angular-devkit/build-angular": "~0.900.5",
+    "@angular/cli": "~9.0.5",
+    "@angular/compiler-cli": "~9.0.6",
     "@types/jasmine": "~3.5.0",
-    "@types/node": "~13.5.0",
-    "codelyzer": "~5.2.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.0",
     "karma": "~4.4.0",
@@ -43,7 +44,7 @@
     "karma-jasmine-html-reporter": "~1.5.0",
     "protractor": "~6.0.0",
     "ts-node": "~8.6.0",
-    "tslint": "~6.1.0",
-    "typescript": "3.4.5"
+    "tslint": "~5.5.0",
+    "typescript": "3.7.5"
   }
 }
