ci: enable lockFileMaintenance

--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,9 @@
   "semanticPrefix": "build:",
   "commitMessage": "{{semanticPrefix}}update {{depName}} to version {{newVersion}}",
   "separateMajorMinor": false,
+  "lockFileMaintenance": {
+    "enabled": true
+  },
   "dependencies": {
     "semanticPrefix": "fix:"
   },
