--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "browserslist": "^4.7.0",
     "chalk": "^4.0.0",
     "chokidar": "^3.2.1",
-    "clean-css": "^4.1.11",
     "commander": "^5.0.0",
+    "cssnano-preset-default": "^4.0.7",
     "fs-extra": "^9.0.0",
     "glob": "^7.1.2",
     "injection-js": "^2.2.1",
     "less": "^3.10.3",
     "node-sass-tilde-importer": "^1.0.0",
-    "postcss": "^7.0.18",
+    "postcss": "^7.0.29",
     "postcss-url": "^8.0.0",
     "read-pkg-up": "^5.0.0",
     "rimraf": "^3.0.0",
@@ -74,7 +74,6 @@
     "@types/acorn": "^4.0.3",
     "@types/chai": "^4.0.0",
     "@types/chokidar": "^1.7.5",
-    "@types/clean-css": "^4.0.0",
     "@types/fs-extra": "^8.0.0",
     "@types/glob": "^7.0.0",
     "@types/jasmine": "^3.0.0",
