--- a/package.json
+++ b/package.json
@@ -55,9 +55,9 @@
     "update-notifier": "^4.0.0"
   },
   "peerDependencies": {
-    "@angular/compiler": "^9.0.0",
-    "@angular/compiler-cli": "^9.0.0",
-    "tslib": "^1.9.0",
+    "@angular/compiler": "^10.0.0-next.0",
+    "@angular/compiler-cli": "^10.0.0-next.0",
+    "tslib": "^1.10.0",
     "typescript": ">=3.6 < 3.9"
   },
   "devDependencies": {
