--- a/package.json
+++ b/package.json
@@ -55,20 +55,20 @@
     "update-notifier": "^4.0.0"
   },
   "peerDependencies": {
-    "@angular/compiler": "^10.0.0-next.8",
-    "@angular/compiler-cli": "^10.0.0-next.8",
+    "@angular/compiler": "^10.0.0-rc.3",
+    "@angular/compiler-cli": "^10.0.0-rc.3",
     "tslib": "^2.0.0",
     "typescript": ">=3.9 < 3.10"
   },
   "devDependencies": {
     "@angular/cdk": "^9.0.0",
-    "@angular/common": "~10.0.0-next.8",
-    "@angular/compiler": "~10.0.0-next.8",
-    "@angular/compiler-cli": "~10.0.0-next.8",
-    "@angular/core": "~10.0.0-next.8",
+    "@angular/common": "~10.0.0-rc.3",
+    "@angular/compiler": "~10.0.0-rc.3",
+    "@angular/compiler-cli": "~10.0.0-rc.3",
+    "@angular/core": "~10.0.0-rc.3",
     "@angular/material": "^9.0.0",
-    "@angular/platform-browser": "~10.0.0-next.8",
-    "@angular/router": "~10.0.0-next.8",
+    "@angular/platform-browser": "~10.0.0-rc.3",
+    "@angular/router": "~10.0.0-rc.3",
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-angular": "^8.0.0",
     "@types/acorn": "^4.0.3",
