--- a/.github/workflows/lock.yml
+++ b/.github/workflows/lock.yml
@@ -13,19 +13,13 @@ jobs:
           github-token: ${{ github.token }}
           issue-lock-inactive-days: 30
           issue-lock-comment: >
-            This issue has been automatically locked due to inactivity.
-
-            Please file a new issue if you are encountering a similar or related problem.
-
-
+            This issue has been automatically locked due to inactivity.<br>
+            Please file a new issue if you are encountering a similar or related problem.<br><br>
             <sub>_This action has been performed automatically by a bot._</sub>
           issue-lock-reason: ''
           pr-lock-inactive-days: 30
           pr-lock-comment: >
-            This PR has been automatically locked due to inactivity.
-
-            Please file a new issue if you are encountering a similar or related problem.
-
-
+            This PR has been automatically locked due to inactivity.<br>
+            Please file a new issue if you are encountering a similar or related problem.<br><br>
             <sub>_This action has been performed automatically by a bot._</sub>
           pr-lock-reason: ''
