refactor: remove update notifier

--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "rxjs": "^6.5.0",
     "sass": "^1.23.0",
     "stylus": "^0.54.7",
-    "terser": "^5.0.0",
-    "update-notifier": "^4.0.0"
+    "terser": "^5.0.0"
   },
   "peerDependencies": {
     "@angular/compiler": "^10.0.0-rc.3",
@@ -85,7 +84,6 @@
     "@types/sinon": "^9.0.0",
     "@types/stylus": "^0.48.30",
     "@types/uglify-js": "^3.0.2",
-    "@types/update-notifier": "^4.0.0",
     "chai": "^4.0.1",
     "copyfiles": "^2.0.0",
     "cpx": "^1.5.0",
