feat: add support for TypeScript 4

--- a/package.json
+++ b/package.json
@@ -54,10 +54,10 @@
     "terser": "^5.0.0"
   },
   "peerDependencies": {
-    "@angular/compiler": "^10.0.0-rc.3",
-    "@angular/compiler-cli": "^10.0.0-rc.3",
+    "@angular/compiler": "^10.0.0",
+    "@angular/compiler-cli": "^10.0.0",
     "tslib": "^2.0.0",
-    "typescript": ">=3.9 < 3.10"
+    "typescript": ">=3.9 < 4.1"
   },
   "devDependencies": {
     "@angular/cdk": "^9.0.0",
