--- a/package.json
+++ b/package.json
@@ -61,13 +61,13 @@
   },
   "devDependencies": {
     "@angular/cdk": "^9.0.0",
-    "@angular/common": "~10.0.0-rc.3",
-    "@angular/compiler": "~10.0.0-rc.3",
-    "@angular/compiler-cli": "~10.0.0-rc.3",
-    "@angular/core": "~10.0.0-rc.3",
+    "@angular/common": "~10.1.0-next.8",
+    "@angular/compiler": "~10.1.0-next.8",
+    "@angular/compiler-cli": "~10.1.0-next.8",
+    "@angular/core": "~10.1.0-next.8",
     "@angular/material": "^9.0.0",
-    "@angular/platform-browser": "~10.0.0-rc.3",
-    "@angular/router": "~10.0.0-rc.3",
+    "@angular/platform-browser": "~10.1.0-next.8",
+    "@angular/router": "~10.1.0-next.8",
     "@commitlint/cli": "^9.0.0",
     "@commitlint/config-angular": "^9.0.0",
     "@types/acorn": "^4.0.3",
@@ -103,7 +103,7 @@
     "ts-node": "^9.0.0",
     "tsickle": "^0.39.0",
     "tslib": "^2.0.0",
-    "typescript": "~3.9.2",
+    "typescript": "~4.0.2",
     "zone.js": "^0.10.0"
   },
   "private": true,
