--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "@rollup/plugin-json": "^4.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "ajv": "^6.12.3",
+    "ansi-colors": "^4.1.1",
     "autoprefixer": "^9.6.5",
     "browserslist": "^4.7.0",
-    "chalk": "^4.0.0",
     "chokidar": "^3.2.1",
     "commander": "^6.0.0",
     "cssnano-preset-default": "^4.0.7",
