feat: support Angular 11

--- a/package.json
+++ b/package.json
@@ -54,20 +54,20 @@
     "terser": "^5.0.0"
   },
   "peerDependencies": {
-    "@angular/compiler": "^10.0.0",
-    "@angular/compiler-cli": "^10.0.0",
+    "@angular/compiler": "^11.0.0-next.0",
+    "@angular/compiler-cli": "^11.0.0-next.0",
     "tslib": "^2.0.0",
     "typescript": ">=3.9 < 4.1"
   },
   "devDependencies": {
     "@angular/cdk": "^10.0.0",
-    "@angular/common": "~10.1.0-next.8",
-    "@angular/compiler": "~10.1.0-next.8",
-    "@angular/compiler-cli": "~10.1.0-next.8",
-    "@angular/core": "~10.1.0-next.8",
+    "@angular/common": "~11.0.0-next.0",
+    "@angular/compiler": "~11.0.0-next.0",
+    "@angular/compiler-cli": "~11.0.0-next.0",
+    "@angular/core": "~11.0.0-next.0",
     "@angular/material": "^10.0.0",
-    "@angular/platform-browser": "~10.1.0-next.8",
-    "@angular/router": "~10.1.0-next.8",
+    "@angular/platform-browser": "~11.0.0-next.0",
+    "@angular/router": "~11.0.0-next.0",
     "@commitlint/cli": "^9.0.0",
     "@commitlint/config-angular": "^9.0.0",
     "@types/acorn": "^4.0.3",
