--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@angular/compiler": "^11.0.0-next.0",
     "@angular/compiler-cli": "^11.0.0-next.0",
     "tslib": "^2.0.0",
-    "typescript": ">=3.9 < 4.1"
+    "typescript": "^4.0.0"
   },
   "devDependencies": {
     "@angular/cdk": "^10.0.0",
