--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ng-packagr",
   "version": "11.0.0-next.1",
-  "description": "Compile and package a TypeScript library to Angular Package Format",
+  "description": "Compile and package an Angular library in Angular Package Format",
   "keywords": [
     "angular",
     "angular2",
@@ -78,8 +78,6 @@
     "@types/jasmine": "^3.0.0",
     "@types/mocha": "^8.0.0",
     "@types/node": "^14.0.0",
-    "@types/react": "^16.0.19",
-    "@types/react-dom": "^16.0.2",
     "@types/read-pkg-up": "^3.0.1",
     "@types/sinon": "^9.0.0",
     "@types/stylus": "^0.48.30",
@@ -94,8 +92,6 @@
     "mocha": "^8.0.0",
     "prettier": "~2.1.0",
     "pretty-quick": "~3.1.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
     "rxjs-compat": "^6.0.0",
     "sinon": "^9.0.0",
     "source-map": "^0.7.0",
