docs: update description and tags

--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "description": "Compile and package an Angular library in Angular Package Format",
   "keywords": [
     "angular",
-    "angular2",
-    "angular4",
     "angular-library",
-    "angular-components",
+    "angular Components",
     "component-library",
     "typescript",
     "css",
-    "scss",
-    "html"
+    "scss"
   ],
   "author": "David Herges <david@spektrakel.de>",
   "license": "MIT",
