docs: update tags

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [
     "angular",
     "angular-library",
-    "angular Components",
+    "angular-components",
     "component-library",
     "typescript",
     "css",
