--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "ng-packagr",
   "version": "11.0.0-next.2",
-  "description": "Compile and package an Angular library in Angular Package Format",
+  "description": "Compile and package an Angular library in Angular Package Format (APF)",
   "keywords": [
+    "apf",
+    "angular-package-format",
     "angular",
     "angular-library",
     "angular-components",
