--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "injection-js": "^2.2.1",
     "less": "^3.10.3",
     "node-sass-tilde-importer": "^1.0.0",
+    "ora": "^5.1.0",
     "postcss": "^7.0.29",
     "postcss-url": "^8.0.0",
     "read-pkg-up": "^5.0.0",
