--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ng-packagr",
   "version": "11.0.0-next.3",
-  "description": "Compile and package a Angular libraries in Angular Package Format (APF)",
+  "description": "Compile and package Angular libraries in Angular Package Format (APF)",
   "keywords": [
     "apf",
     "angular-package-format",
