--- a/package.json
+++ b/package.json
@@ -54,10 +54,10 @@
     "terser": "^5.0.0"
   },
   "peerDependencies": {
-    "@angular/compiler": "^11.0.0-next.0",
-    "@angular/compiler-cli": "^11.0.0-next.0",
+    "@angular/compiler": "^11.0.0",
+    "@angular/compiler-cli": "^11.0.0",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
+    "typescript": ">=4.0 <4.2"
   },
   "devDependencies": {
     "@angular/cdk": "^11.0.0",
