--- a/package.json
+++ b/package.json
@@ -56,8 +56,14 @@
   "peerDependencies": {
     "@angular/compiler": "^11.0.0",
     "@angular/compiler-cli": "^11.0.0",
+    "tsickle": "~0.39.0",
     "tslib": "^2.0.0",
     "typescript": ">=4.0 <4.2"
+  },
+  "peerDependenciesMeta": {
+    "tsickle": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@angular/cdk": "^11.0.0",
