fix: set sourceRoot to empty string to correctly resolve dts sources
Closes https://github.com/angular/angular-cli/issues/19668

--- a/integration/samples/api/tsconfig.ngc.json
+++ b/integration/samples/api/tsconfig.ngc.json
@@ -22,6 +22,7 @@
     "inlineSourceMap": true,
     "inlineSources": true,
     "skipLibCheck": true,
+    "declarationMap": true,
     "emitDecoratorMetadata": false,
     "experimentalDecorators": true,
     "importHelpers": true,
