ci: disable windows CI on PR due to credit limit

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,6 +133,9 @@ workflows:
           filters:
             tags:
               only: /v.*/
+            branches:
+              ignore:
+                - /pull\/\d+/
           requires:
             - setup
       - deploy:
