ci: disable windows ci for renovate

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,7 +135,7 @@ workflows:
               only: /v.*/
             branches:
               ignore:
-                - /pull\/\d+/
+                - /renovate\/.*
           requires:
             - setup
       - deploy:
