ci: fix publish ci

--- a/package.json
+++ b/package.json
@@ -113,9 +113,8 @@
     "build": "tsc -p src/tsconfig.packagr.json",
     "postbuild": "node ./scripts/postbuild.js",
     "schema": "json2ts --input src/ng-package.schema.json --output src/ng-package.schema.ts",
-    "prerelease": "yarn build",
     "release": "standard-version --releaseCommitMessageFormat 'release: cut v{{currentTag}}' --no-verify",
-    "publish:ci": "yarn prerelease && yarn postrelease",
+    "publish:ci": "yarn build",
     "integration:samples": "integration/samples.sh",
     "integration:samples:dev": "ts-node --project src/tsconfig.packagr.json ./integration/samples.dev.ts",
     "integration:specs": "cross-env TS_NODE_PROJECT=integration/tsconfig.specs.json mocha --require ts-node/register \"integration/samples/*/specs/**/*.ts\"",
