fix: ensure license entry point is properly built (#1849)
Fixes: #1849

--- a/integration/samples/apf/package.json
+++ b/integration/samples/apf/package.json
@@ -3,6 +3,7 @@
   "name": "@sample/apf",
   "description": "A sample library testing Angular Package Format",
   "version": "1.0.0-pre.0",
+  "license": "MIT",
   "private": true,
   "repository": "https://github.com/ng-packagr/ng-packagr.git",
   "peerDependencies": {
