refactor: update to postcss 8

--- a/integration/tsconfig.specs.json
+++ b/integration/tsconfig.specs.json
@@ -1,6 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "baseUrl": ".",
     "allowJs": true
   },
   "include": ["**/specs/*.ts"]
