--- a/package.json
+++ b/package.json
@@ -31,18 +31,18 @@
     "@rollup/plugin-node-resolve": "^11.1.0",
     "ajv": "^7.0.3",
     "ansi-colors": "^4.1.1",
-    "autoprefixer": "^9.6.5",
+    "autoprefixer": "^10.2.4",
     "browserslist": "^4.16.1",
     "chokidar": "^3.5.1",
     "commander": "^7.0.0",
-    "cssnano-preset-default": "^4.0.7",
+    "cssnano": "^4.1.10",
     "glob": "^7.1.6",
     "injection-js": "^2.4.0",
     "less": "^4.1.0",
     "node-sass-tilde-importer": "^1.0.2",
     "ora": "^5.1.0",
-    "postcss": "^7.0.29",
-    "postcss-url": "^8.0.0",
+    "postcss": "^8.2.4",
+    "postcss-url": "^10.1.1",
     "read-pkg-up": "^5.0.0",
     "rimraf": "^3.0.0",
     "rollup": "^2.37.0",
@@ -72,9 +72,11 @@
     "@types/acorn": "^4.0.3",
     "@types/chai": "^4.0.0",
     "@types/chokidar": "^1.7.5",
+    "@types/cssnano": "^4.0.0",
     "@types/fs-extra": "^9.0.0",
     "@types/glob": "^7.0.0",
     "@types/jasmine": "^3.0.0",
+    "@types/less": "^3.0.2",
     "@types/mocha": "^8.0.0",
     "@types/node": "^14.0.0",
     "@types/read-pkg-up": "^3.0.1",
@@ -83,13 +85,13 @@
     "@types/stylus": "^0.48.30",
     "chai": "^4.0.1",
     "cross-env": "^7.0.0",
+    "fs-extra": "^9.0.0",
     "husky": "^4.0.0",
     "jasmine": "^3.0.0",
     "json-schema-to-typescript": "^10.0.0",
     "mocha": "^8.0.0",
     "prettier": "~2.2.0",
     "pretty-quick": "~3.1.0",
-    "fs-extra": "^9.0.0",
     "rxjs-compat": "^6.0.0",
     "sinon": "^9.0.0",
     "source-map": "^0.7.0",
