--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "rxjs": "^6.5.0",
     "sass": "^1.32.5",
     "stylus": "^0.54.8",
+    "sync-rpc": "^1.3.6",
     "terser": "^5.5.1"
   },
   "peerDependencies": {
