feat: add support for comments in JSON configuration file
Closes #1896

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cssnano": "^4.1.10",
     "glob": "^7.1.6",
     "injection-js": "^2.4.0",
+    "jsonc-parser": "^3.0.0",
     "less": "^4.1.0",
     "node-sass-tilde-importer": "^1.0.2",
     "ora": "^5.1.0",
