fix: don't generate minified UMD bundles.
In version 12, applications will only be allowed to be built in Ivy, this makes the minified UMDs redundant since they cannot be processed by NGCC.

With this change, we remove the minified UMDs from the generated APF package.

BREAKING CHANGE:

Minified UMD bundles are no longer generated.

--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rxjs": "^6.5.0",
     "sass": "^1.32.5",
-    "stylus": "^0.54.8",
-    "terser": "^5.5.1"
+    "stylus": "^0.54.8"
   },
   "peerDependencies": {
     "@angular/compiler": "^12.0.0-next.0",
